fixed blog display spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -736,3 +736,7 @@ $yellow:#f5bc04;
 	overflow-y: auto;
 	text-align:justify;
 }
+
+.desc {
+	white-space: pre-line;
+}
